kubernetes/mongodb/cronyx-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: cronyx-server
  name: cronyx-server
spec:
  replicas: 1
  selector:
    matchLabels:
      service: cronyx-server
  strategy: {}
  template:
    metadata:
      labels:
        network/cronyx-server-default: "true"
        service: cronyx-server
    spec:
      containers:
        - env:
            - name: SERVER_PORT
              value: "3000"
            - name: TIMEZONE
              value: UTC
            - name: JOB_STORE_SOURCE
              value: mongodb
            - name: JOB_STORE_URL
              valueFrom:
                secretKeyRef:
                  name: cronyx-server-secret-mongodb
                  key: JOB_STORE_URL
            - name: BASIC_AUTH_USERNAME
              valueFrom:
                secretKeyRef:
                  name: cronyx-server-secret-mongodb
                  key: BASIC_AUTH_USERNAME
            - name: BASIC_AUTH_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: cronyx-server-secret-mongodb
                  key: BASIC_AUTH_PASSWORD
          image: yujiosaka/cronyx-server
          name: cronyx-server
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
          resources: {}
      restartPolicy: Always
status: {}
