kubernetes/mongodb/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongodb
  strategy: {}
  template:
    metadata:
      labels:
        network/cronyx-server-default: "true"
        service: mongodb
    spec:
      containers:
        - image: mongo:latest
          name: mongodb
          ports:
            - containerPort: 27017
          resources: {}
      restartPolicy: Always
status: {}
