kubernetes/mongodb/cronyx-server-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cronyx-server-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/cronyx-server-default: "true"
  podSelector:
    matchLabels:
      network/cronyx-server-default: "true"
